# DeepLearningImageGeneration

./: .gitignore  LICENSE  README.md  main.py  nohup.out  pyproject.toml  sweep.py
configs/: config.py
configuration/10_class_m5_sweep/: config.json  sweep_config.json
configuration/10_class_vit_repr/: config.json  run.sh  sweep_config.json
configuration/10_class_vit_sweep/: config.json  sweep_config.json
configuration/binary_test/: config.json  sweep_config.json
configuration/conformer_scratch_size_config/: config.json
configuration/full_dataset_sweep/: config.json  config_11_classes.json  config_2_classes.json  run.sh  run_11_classes_sweeps.sh  run_2_classes_sweeps.sh  sweep_config.json
configuration/multiclass_test/: config.json  config2.json
configuration/run_optimal_configs/: 11_class.json  2_class.json  run_11_classes.sh  run_2_classes.sh
configuration/sampling_strategy/: config.json  run.sh  sweep_config.json
configuration/sweep_test/: config.json  sweep_config.json
configuration/unet2d_sweep/: config.json  sweep_config.json
dataset/: dataset.py
engine/: __init__.py  base_engine.py  dcgan_engine.py  sweep_engine.py  train_engine.py  unet2d_engine.py
modeling/: __init__.py  loss.py  model.py
notebooks/: eda.ipynb  manual_ensemble.ipynb  template_test.ipynb
notebooks/analysis/: conformer_analysis.ipynb  ensemble_methods.ipynb  m5_analysis.ipynb  m5_binary_analysis.ipynb  single_ensemble.ipynb  vit_analysis.ipynb  vit_repr_analysis.ipynb  vit_sweep_analysis.ipynb
scripts/: preprocess_dataset.py
utils/: clipmmd.py  config_merge.py
(+8 files in other folders)
