[project]
name = "deep-learning-template"
version = "0.1.0"
description = "A template for deep learning projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.2.1",
    "dataclass-wizard==0.34.0",
    "ipython>=8.35.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "opencv-python==4.10.0.84",
    "pandas>=2.2.3",
    "rich==13.9.4",
    "scikit-learn>=1.6.1",
    "tabulate==0.9.0",
    "tensorboardx==2.6.2.2",
    "timm>=1.0.15",
    "torch==2.3.1",
    "torchaudio>=2.3.1",
    "torchvision==0.18.1",
    "tyro==0.9.5",
    "wandb>=0.19.9",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
